adpafit-init
